--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.2.3",
